--- a/_config.yml
+++ b/_config.yml
@@ -45,8 +45,9 @@ two_columns_layout: true
 
 
 # Advanced Settings
+remote_theme: thiagorossener/jekflix-template
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site
+url: "statboyz.com/haylium-blog/" # the base hostname & protocol for your site
 google_analytics: "UA-XXXXXXXX-X"
 language: "en"
 categories_folder: category
