--- a/_config.yml
+++ b/_config.yml
@@ -46,8 +46,8 @@ two_columns_layout: true
 
 # Advanced Settings
 remote_theme: thiagorossener/jekflix-template
-baseurl: "haylium.com" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "haylium.com" # the base hostname & protocol for your site
 google_analytics: "UA-XXXXXXXX-X"
 language: "en"
 categories_folder: category
