--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,13 @@
 # Site Settings
 name: Haylium 
 title: Haylium | The Blog!
-description: Jekflix is a template for Jekyll inspired by Netflix and made by
-  Thiago Rossener.
+description: My name is Jeff and I write about python and finance. 
 tags:
   - blog
   - template
   - jekyll
   - theme
-  - netlify
+  - python
 show_hero: true
 menu:
   - title: Home
@@ -19,7 +18,7 @@ menu:
     url: /contact
   - title: Feed
     url: /feed.xml
-email: youremail@test.com
+email: info@haylium.com
 # See: https://disqus.com/
 disqus_username: disqus_username
 # Contact Form Setting
@@ -29,12 +28,12 @@ formspree_form_id: formspree_form_id
 
 # Social Media Settings
 # Remove the item if you don't need it
-github_username: github_username
+github_username: jhaylium
 facebook_username: facebook_username
-twitter_username: twitter_username
+twitter_username: b0redt0jeff
 instagram_username: instagram_username
-linkedin_username: linkedin_username
-medium_username: medium_username
+linkedin_username: jeffery-d-mccain/
+medium_username: jmccain_009
 
 
 # Posts Settings
@@ -48,7 +47,7 @@ two_columns_layout: true
 remote_theme: thiagorossener/jekflix-template
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
-google_analytics: "UA-XXXXXXXX-X"
+google_analytics: "UA-215105293-1"
 language: "en"
 categories_folder: category
 sent_message_url: "/contact/message-sent/"
